--- a/mod2_solution/styles.css
+++ b/mod2_solution/styles.css
@@ -62,6 +62,7 @@ h1 {
 	margin-top:5px;
 	margin-bottom: 15px;
 	text-align: center;
+	font-size:175%;
 }
 
 h2 {
@@ -70,6 +71,7 @@ h2 {
 	background-color: #AFEEEE;
 	text-align: center;
 	margin-bottom: 5px;
+	font-size:125%;
 }
 
 p {
