--- a/mod2_solution/styles.css
+++ b/mod2_solution/styles.css
@@ -1,13 +1,13 @@
 @media (min-width:992px){
 	section {
 		width: 30%;
+		height: 225px;
 		position: relative;
-		left: 3%;
+		left: 2.5%;
 	}
 
 	h2 {
-		position: relative;
-		left: 70%;
+		width: 50%;
 	}
 
 }
@@ -18,17 +18,16 @@
 		left: 3%;
 	}
 
+	#title_left, #title_center {
+		width: 50%;
+	}
+
 	#left, #center {
 		width: 45%;
 	}
 
 	#right {
-		width: 90%;
-	}
-
-	h2 {
-		position: relative;
-		left: 70%;
+		width: 93.25%;
 	}
 
 }
@@ -38,11 +37,6 @@
 		width: 90%;
 		position: relative;
 		left: 3%;
-	}
-
-	h2 {
-		position: relative;
-		left: 66.66%;
 	}
 
 }
@@ -59,42 +53,48 @@ body {
 }
 
 h1 {
-	margin-top:5px;
+	margin-top:15px;
 	margin-bottom: 15px;
 	text-align: center;
 	font-size:175%;
 }
 
 h2 {
+	padding: 5px;
 	border: solid 1px #000000; 
-	width: 33.33%;
-	background-color: #AFEEEE;
+	width: 33.3%;
 	text-align: center;
 	margin-bottom: 5px;
 	font-size:125%;
+	position: relative;
+	bottom: 5.75px;
+	left: 5.75px;
+	float: right;
 }
 
 p {
 	font-family:"Roboto", sans-serif;
 	color: #696969;
+	clear: right;
 }
 
-#left {
-	background-color: #F8F8FF
+#title_left {
+	background-color: #F8F8FF;
 }
 
-#center {
-	background-color: #F0FFFF
+#title_center {
+	background-color: #F0FFFF;
 }
 
-#right {
-	background-color: #F5FFFA
+#title_right {
+	background-color: #F5FFFA;
 }
 
 section {
 	float: left;
 	border: solid 1px #000000;
 	padding: 5px;
-	margin: 10px;
+	margin: 15px;
 	align-items: center;
+	background-color: #F5F5F5;
 }
